unpackaged/main/default/objects/ETT_Work_Schedule__c/ETT_Work_Schedule__c.object-meta.xml
<CustomObject>
    <label>Work Schedule</label>
    <nameField>
        <displayFormat>SCH-{000}</displayFormat>
        <label>Work Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>