unpackaged/main/default/objects/ETT_Work_Schedule__c/fields/ETT_End_time__c.field-meta.xml
<CustomField>
    <fullName>ETT_End_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>