unpackaged/main/default/objects/ETT_Work_Schedule__c/fields/ETT_Technician__c.field-meta.xml
<CustomField>
    <fullName>ETT_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>