unpackaged/main/default/objects/ETT_Work_Schedule__c/fields/ETT_Work_Station__c.field-meta.xml
<CustomField>
    <fullName>ETT_Work_Station__c</fullName>
    <label>Work Station</label>
    <referenceTo>ETT_Work_Station__c</referenceTo>
    <relationshipLabel>Work Schedule</relationshipLabel>
    <relationshipName>Work_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>