unpackaged/main/default/objects/ETT_Work_Schedule__c/validationRules/ETT_Validate_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Validate_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>ETT_End_time__c&lt; NOW()</errorConditionFormula>
    <errorDisplayField>ETT_End_time__c</errorDisplayField>
    <errorMessage>End time should be a future time.</errorMessage>
</ValidationRule>