unpackaged/main/default/objects/ETT_Work_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Technician__c</columns>
    <columns>ETT_Work_Station__c</columns>
    <columns>ETT_Start_time__c</columns>
    <columns>ETT_End_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>